ppx/test/pp_errors.expected
File "input_errors.ml", line 3, characters 24-38:
3 | let%component make () = div ~lola:1 ()
                            ^^^^^^^^^^^^^^
Error: prop 'lola' isn't a valid prop for a 'div'
